デザインの修正

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
     p.lead 予定調整くんは，GitHubで認証でき，予定を作って出欠が取れるサービスです
   if user 
     div
-      a(href="/schedule/new").btn.btn-info 予定を作る
+      a(href="/schedules/new").btn.btn-info 予定を作る
     - var hasSchedule = schedules.length > 0
     if hasSchedule
       h3.my-3 あなたの作った予定一覧
@@ -18,4 +18,4 @@ block content
           tr
             td
               a(href=`/schedules/${schedule.scheduleId}`) #{schedule.scheduleName}
-            td #{schedule.updatedAt}
+            td #{schedule.formattedUpdatedAt}
